                    Changes made to Pyjamas since 0.6
                    ---------------------------------

 * Added builtin zip() function

 * Added builtin reduce() function

 * Added builtin iter() function

 * Added types set and frozenset

 * Added builtin reversed() function

 * Added fromkeys method to dict

 * Added builtin sorted() function

 * Optimized 'for x in y' loops

 * Output is packable with http://dean.edwards.name/packer/

 * JavaScriptLint checks

 * Python 2.6 TranslationError deprecation message fix

 * Added support for relative imports

 * Added insertItem to Tree, TreeItem and RootTreeItem and demo in
   KitchenSink Trees.py (thanks to Carl Roach)

 * Added arguments for instance initialization in jsObjectToPyObject

 * Implemented NotImplementedType and NotImplemented

 * Implemented an int type and a long type

 * Add support for xrange and propper range (range was in fact an xrange)

 * Add support for multiple compare (0 < n < 4)

 * Add DoubleClickListener mixin

 * Add PUT and DELETE into XMLHttpRequest (thanks to Nick <thretwon@gmail.com>)

 * Added for in tuple

 * Added support for locals()

 * Added support for slice delete

 * Added support of slice assignment

 * Added support for IfExp (inline if expression)

 * Added support for generator expressions

 * Added support for any statement in class definition

 * Added support backquote

 * Added support for class definition anywhere

 * Re-enabled and fixed up pyv8run.py, which now successfully runs
   LibTest when translated to javascript (and passes 99.95%)

 * added support for Subscript Assignment in class definitions:
   class SubAssignBase(object):
       names['SubAssign'] = 'SubAssign'

 * Added support for generators (yield statement)

 * Added an substantial portion of re module

 * added isReadOnly and getReadOnly functions to FocusMixin, such that
   FocusPanel and FocusWidget both get that functionality (thanks to
   guenter walser)
